--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
-        run: echo "::debug::Debug message"
+        run: |
+          echo Hello, world!
+          echo "::debug::Debug message"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
