--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,12 +34,14 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
+          set -x
           echo Hello, world!
           echo "::debug::Debug message"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          set -x
           echo Add other actions to build,
           echo test, and deploy your project.
 
