--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,16 +26,24 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    env:
+      VAR: ENV_VAR
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+
+      - name: print masked env
+        run: |
+          set -x
+          echo ::add-mask::${VAR}
 
       - name: grouping debug logs
         run: |
           set -x
           echo ::group::Hello
           echo grouped Hello, world!
+          printenv
           echo ::endgroup::
 
       # Runs a single command using the runners shell
