--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,12 +39,18 @@ jobs:
           echo "started"
           echo "::add-mask::${VAR}"
           echo "${VAR}"
-          echo "::endmask::"
 
           echo "::error::This is an error"
           echo "::warning::This is a warning"
           echo "::notice::This is a notice"
           echo "finished"
+
+      - name: print as markdown
+        run: |
+          echo "## This is a markdown header" >> "${GITHUB_STEP_SUMMARY}"
+          echo "- Step 1" >> "${GITHUB_STEP_SUMMARY}"
+          echo "- Step 2" >> "${GITHUB_STEP_SUMMARY}"
+
 
       - name: grouping debug logs
         run: |
