--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -74,3 +74,12 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
+  next_step:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: print env
+      run: |
+        echo "next_stap"
+
+      
