--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,27 +59,22 @@ jobs:
           echo grouped Hello, world!
           printenv
           echo ::endgroup::
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: set output
+        id: set-output
         run: |
-          set -x
-          echo Hello, world!
-          echo "::debug::Debug message"
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          set -x
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo temp_var="first step output" >> ${GITHUB_OUTPUT}
+    outputs:
+      temp_var: ${{ steps.set-output.outputs.temp_var }}
 
   next_step:
     runs-on: ubuntu-latest
     needs: build
+    env:
+      TEMP_VAR: ${{ needs.build.outputs.temp_var }}
     steps:
     - name: print env
       run: |
         echo "next_stap"
+        echo "${TEMP_VAR}"
 
       
