--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      - uses: ./.github/actions/hello
+
       - name: print masked env
         run: |
           # set -x
