--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/hello
+      - uses: ./.github/actions/dump/
+        id: dump
+        with:
+          enable-context: "true"
+      - run: echo "${DATE}"
+        env:
+          DATE: ${{ steps.dump.outputs.dumped-date }}
+
 
       - name: print masked env
         run: |
