--- a/.github/actions/dump/action.yaml
+++ b/.github/actions/dump/action.yaml
@@ -16,11 +16,11 @@ runs:
   using: composite
   steps:
     - run: printenv | sort
-      shell: bash
+      # shell: bash
     - run: echo "${CONTEXT}"
       if: ${{inputs.enable-context == 'true'}}
       env:
         CONTEXT: ${{ toJson(github) }}
     - id: current
       run: echo "data=$(date)" >> "{{GITHUB_OUTPUT}}"
-      shell: bash
+      # shell: bash
