--- a/.github/actions/dump/action.yaml
+++ b/.github/actions/dump/action.yaml
@@ -10,7 +10,7 @@ inputs:
 
 outputs:
   dumped-date:
-    value: ${{steps.current.outputs.date}}
+    value: ${{steps.current.outputs.data}}
 
 runs:
   using: composite
