--- a/.github/actions/dump/action.yaml
+++ b/.github/actions/dump/action.yaml
@@ -11,7 +11,7 @@ inputs:
     default: "true"
     required: false
     description: "print env variables"
-    
+
 outputs:
   dumped-date:
     value: ${{steps.current.outputs.date}}
@@ -27,6 +27,7 @@ runs:
       env:
         CONTEXT: ${{ toJson(github) }}
       shell: bash
+    - run: echo "{CONTEXT}"
     - id: current
       run: echo date=$(date) >> ${GITHUB_OUTPUT}
       shell: bash
