--- a/.github/actions/dump/action.yaml
+++ b/.github/actions/dump/action.yaml
@@ -23,13 +23,10 @@ runs:
       shell: bash
       if: ${{inputs.print-env == 'true'}}
 
-    - run: echo "${CONTEXT}"
-      if: ${{inputs.enable-context == 'true'}}
+    - if: ${{inputs.enable-context == 'true'}}
+      run: echo "${CONTEXT}"
       env:
         CONTEXT: ${{ toJson(github) }}
-      shell: bash
-
-    - run: echo "${CONTEXT}"
       shell: bash
 
     - id: current
